bugfix(test-cases): Fixed all failing JUnit test cases